Fixed broken CSS and added react-dom-router dependency

--- a/src/Ali.css
+++ b/src/Ali.css
@@ -85,6 +85,7 @@ p.body {
   overflow-wrap: break-word;
 }
 
-p {
-  width: fit-content;
+div.oneyear-root p {
+  width: 40%;
+  text-align: center;
 }
